@@ -574,6 +574,7 @@ appendfile4:
 smtp:
   driver = smtp
   authenticated_sender = abcde
+  authenticated_sender_force = true
   no_allow_localhost
   command_timeout = 5m
   connect_timeout = 0s
