@@ -1,4 +1,4 @@
-$Cambridge: exim/doc/doc-txt/ChangeLog,v 1.314 2006/02/28 11:25:40 ph10 Exp $
+$Cambridge: exim/doc/doc-txt/ChangeLog,v 1.315 2006/02/28 12:42:47 ph10 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -238,6 +238,8 @@ PH/45 When the plaintext authenticator is running as a client, the server's
 
 PH/46 Messages that are created by the autoreply transport now contains a
       References: header, in accordance with RFCs 2822 and 3834.
+
+PH/47 Added authenticated_sender_force to the smtp transport.
 
 
 Exim version 4.60
